--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,19 +1,14 @@
-<ion-tabs>
+<ion-tabs (ionTabsWillChange)="setTab($event.tab)">
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+    <ion-tab-button tab="matchups">
+      <ion-icon [name]="tab === 'matchups' ? 'easel' : 'easel-outline'"></ion-icon>
+      <ion-label>Matchups</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+    <ion-tab-button tab="explore">
+      <ion-icon [name]="tab === 'explore' ? 'football' : 'football-outline'"></ion-icon>
+      <ion-label>Explore</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
