--- a/src/app/pages/matchups/matchups.page.scss
+++ b/src/app/pages/matchups/matchups.page.scss
@@ -18,6 +18,7 @@
   justify-content: space-between;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.07), 0 8px 16px rgba(0, 0, 0, 0.07);
   transition: all 150ms;
+  text-decoration: none;
 
   &:active {
     transform: scale(0.97);
