--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -100,4 +100,8 @@
   --element-850: #262626;
   --element-900: #191919;
   --element-950: #0d0d0d;
+
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
