--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,15 +1,10 @@
 <ion-tabs (ionTabsWillChange)="setTab($event.tab)">
 
-  <ion-tab-bar slot="bottom">
+  <!-- <ion-tab-bar slot="bottom">
     <ion-tab-button tab="matchups">
       <ion-icon [name]="tab === 'matchups' ? 'easel' : 'easel-outline'"></ion-icon>
       <ion-label>Matchups</ion-label>
     </ion-tab-button>
-
-    <ion-tab-button tab="explore">
-      <ion-icon [name]="tab === 'explore' ? 'football' : 'football-outline'"></ion-icon>
-      <ion-label>Explore</ion-label>
-    </ion-tab-button>
-  </ion-tab-bar>
+  </ion-tab-bar> -->
 
 </ion-tabs>
